dashboard/dashboard-proxy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-s3-gw-proxy
  namespace: saleor-dashboard
  labels:
    app: saleor-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: saleor-dashboard
  template:
    metadata:
      labels:
        app: saleor-dashboard
    spec:
      serviceAccount: saleor-dashboard-sa
      serviceAccountName: saleor-dashboard-sa
      restartPolicy: Always
      containers:
      - name: nginx-s3-gateway
        image: nginxinc/nginx-s3-gateway:unprivileged-oss-20221216
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /health
            port: http
        readinessProbe:
            httpGet:
              path: /health
              port: http
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: node-type
                  operator: In
                  values:
                  - frontend-proxy
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard-s3-gw-proxy-svc
  namespace: saleor-dashboard
spec:
  selector:
    app: saleor-dashboard
  ports:
    - protocol: TCP
      port: 8080
      targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-s3-gw-proxy-ingress
  namespace: saleor-dashboard
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  ingressClassName: cilium
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dashboard-s3-gw-proxy-svc
            port:
              number: 8080
